<?xml version="1.0"?>
<package format="3">
    <name>fixposition_odometry_converter_ros2</name>
    <version>1.0.0</version>
    <description>fixposition_odometry_converter_ros2</description>

    <maintainer email="todo@todo.com">todo</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclcpp</exec_depend>
    <depend>nav_msgs</depend>
    <depend>fixposition_driver_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
